# intelligent-ocr

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
services/: azure_vision_ai_ocr.py  claude_ai_vision.py  detect_line_color.py  enhance_text_visibility.py  ocr_pipeline.py  openai_vision.py  remove_horizontal_lines.py  synthesize_azure_ai_ocr.py
static/: style.css
templates/: upload.html
